fix gap

--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -29,7 +29,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 70px;
+    gap: 100px;
 }
 
 .controls__periods {
@@ -37,7 +37,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 70px;
+    gap: 100px;
 }
 
 .controls__periods li {
